{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 509,
  "lineage": "56d665d1-10f6-fabb-41e2-582b2d1a3b2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09934bd76e1646d5d",
            "arn": "arn:aws:ec2:us-east-1:585384908262:elastic-ip/eipalloc-09934bd76e1646d5d",
            "domain": "vpc",
            "id": "eipalloc-09934bd76e1646d5d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-219-134.compute-1.amazonaws.com",
            "public_ip": "98.84.219.134",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "eipalloc-09934bd76e1646d5d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Frontend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:585384908262:instance/i-004bfef214ac82cb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004bfef214ac82cb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "3tierkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0307121ed169e1989"
              }
            ],
            "primary_network_interface_id": "eni-0307121ed169e1989",
            "private_dns": "ip-10-0-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-44-203-218-41.compute-1.amazonaws.com",
            "public_ip": "44.203.218.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03aa0d189ec3049d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9dc94980cee7802",
            "tags": {
              "Name": "Frontend-server"
            },
            "tags_all": {
              "Name": "Frontend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c80948ba9ff55c2a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "i-004bfef214ac82cb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.three_tier_key",
            "aws_security_group.webserver-sg",
            "aws_subnet.public-subnet-frontend",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:585384908262:instance/i-044c018bc80834ba0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app-server-profile",
            "id": "i-044c018bc80834ba0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "3tierkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e07281eb71d054ad"
              }
            ],
            "primary_network_interface_id": "eni-0e07281eb71d054ad",
            "private_dns": "ip-10-0-2-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.18",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6aa068239ef12a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9a34f4f81dfbf2c",
            "tags": {
              "Name": "backend-server"
            },
            "tags_all": {
              "Name": "backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070ce9b68c9658f60"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "i-044c018bc80834ba0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.app_server_profile",
            "aws_iam_role.app_server_role",
            "aws_key_pair.three_tier_key",
            "aws_security_group.backend-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private-subnet-app",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:internet-gateway/igw-04b7ed94b9c8f2dd9",
            "id": "igw-04b7ed94b9c8f2dd9",
            "owner_id": "585384908262",
            "region": "us-east-1",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "igw-04b7ed94b9c8f2dd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09934bd76e1646d5d",
            "association_id": "eipassoc-08c97c41d5559d348",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09050131cd53bf7dd",
            "network_interface_id": "eni-0d0eecb3c7cbdaa22",
            "private_ip": "10.0.1.155",
            "public_ip": "98.84.219.134",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9dc94980cee7802",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "nat-09050131cd53bf7dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.internet-gateway",
            "aws_subnet.public-subnet-frontend",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:route-table/rtb-04eef568afe59e724",
            "id": "rtb-04eef568afe59e724",
            "owner_id": "585384908262",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "db-route-table"
            },
            "tags_all": {
              "Name": "db-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtb-04eef568afe59e724",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:route-table/rtb-08a356ec6f39b25f5",
            "id": "rtb-08a356ec6f39b25f5",
            "owner_id": "585384908262",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09050131cd53bf7dd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtb-08a356ec6f39b25f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.internet-gateway",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet-frontend",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:route-table/rtb-0ab67da75ed8053f2",
            "id": "rtb-0ab67da75ed8053f2",
            "owner_id": "585384908262",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b7ed94b9c8f2dd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtb-0ab67da75ed8053f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-app-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0547f0f2d943503d6",
            "region": "us-east-1",
            "route_table_id": "rtb-08a356ec6f39b25f5",
            "subnet_id": "subnet-0c9a34f4f81dfbf2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtbassoc-0547f0f2d943503d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.internet-gateway",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-app",
            "aws_subnet.public-subnet-frontend",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-db1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06973da32e4ac0816",
            "region": "us-east-1",
            "route_table_id": "rtb-04eef568afe59e724",
            "subnet_id": "subnet-0e85b5af62ace7ba1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtbassoc-06973da32e4ac0816",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.private-subnet-db1",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-db2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b1990566c2a4107",
            "region": "us-east-1",
            "route_table_id": "rtb-04eef568afe59e724",
            "subnet_id": "subnet-05eabfcda4883d0e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtbassoc-05b1990566c2a4107",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.private-subnet-db2",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f02d75c0834ce6a0",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab67da75ed8053f2",
            "subnet_id": "subnet-0e9dc94980cee7802"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "rtbassoc-0f02d75c0834ce6a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-frontend",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:security-group/sg-070ce9b68c9658f60",
            "description": "Allow traffic from frontend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070ce9b68c9658f60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c80948ba9ff55c2a"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "585384908262",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "sg-070ce9b68c9658f60",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:security-group/sg-05122d520f7c35bfb",
            "description": "Allow traffic from backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05122d520f7c35bfb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-070ce9b68c9658f60"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "585384908262",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "sg-05122d520f7c35bfb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:security-group/sg-0c80948ba9ff55c2a",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c80948ba9ff55c2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "585384908262",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "sg-0c80948ba9ff55c2a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:subnet/subnet-0c9a34f4f81dfbf2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9a34f4f81dfbf2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585384908262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-app"
            },
            "tags_all": {
              "Name": "private-subnet-app"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "subnet-0c9a34f4f81dfbf2c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:subnet/subnet-0e85b5af62ace7ba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e85b5af62ace7ba1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585384908262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-db1"
            },
            "tags_all": {
              "Name": "private-subnet-db1"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "subnet-0e85b5af62ace7ba1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:subnet/subnet-05eabfcda4883d0e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eabfcda4883d0e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585384908262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-db2"
            },
            "tags_all": {
              "Name": "private-subnet-db2"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "subnet-05eabfcda4883d0e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:subnet/subnet-0e9dc94980cee7802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dc94980cee7802",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585384908262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-frontend"
            },
            "tags_all": {
              "Name": "public-subnet-frontend"
            },
            "vpc_id": "vpc-0ef8b366be11ad610"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "subnet-0e9dc94980cee7802",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPC-3-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-3-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585384908262:vpc/vpc-0ef8b366be11ad610",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce1f5169dfbe8e26",
            "default_route_table_id": "rtb-085a12cbde2c5d0e3",
            "default_security_group_id": "sg-07aa647e0bbe286b1",
            "dhcp_options_id": "dopt-09c98d55ac32333d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef8b366be11ad610",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085a12cbde2c5d0e3",
            "owner_id": "585384908262",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-3-tier"
            },
            "tags_all": {
              "Name": "VPC-3-tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "585384908262",
            "id": "vpc-0ef8b366be11ad610",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}